@@ -1,3 +1,11 @@
+2014- Konstas Marmatakis marmako@gmail.com
+
+	* tkbackup.py: 
+		Added message on loading project. 
+		Added message on saving project.
+		Minor bug fixes.
+	* copymo.py: Added.
+
 2014-04-30 Konstas Marmatakis marmako@gmail.com
 
 	* setup.py: Improvements.
